# co2_shifter

./: .gitignore  CLAUDE.md  README.md
.claude/skills/verify/: SKILL.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: Co2Chart.tsx  CostShiftCalculator.tsx  EmissionFactorsChart.tsx  LoadProfileInput.tsx  PriceChart.tsx  ShiftCalculator.tsx
frontend/src/lib/: cost-shift-calculator.ts  emission-factors.ts  example-profiles.ts  regions.ts  shift-calculator.ts  supabase.ts
frontend/src/types/: index.ts
pipeline/: .env.example  pyproject.toml
pipeline/pipeline/: definitions.py  entsoe_regions.py  entsoe_xml.py
pipeline/pipeline/assets/: co2_intensity.py  co2_intensity_entsoe.py  co2_intensity_synthetic.py  day_ahead_prices_entsoe.py
pipeline/pipeline/jobs/: day_ahead_price_job.py  entsoe_job.py  ingest_job.py  seed_job.py
pipeline/pipeline/resources/: api_key_resource.py  supabase_resource.py
pipeline/pipeline/schedules/: daily_day_ahead_price_ingest.py  daily_ingest.py
pipeline/tests/: conftest.py  test_day_ahead_price_schedule.py  test_day_ahead_prices.py  test_day_ahead_prices_asset.py  test_electricity_maps.py  test_entsoe.py  test_entsoe_asset.py  test_schedule.py  test_supabase_resource.py  test_synthetic.py
supabase/migrations/: 001_initial_schema.sql  002_rolling_average.sql  003_regions_mix_factors.sql  004_avg_window_rpc.sql  005_day_ahead_prices.sql  006_generation_mix_by_slot.sql  007_avg_window_anchor_last_day.sql
