[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "co2_shifter_pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "httpx>=0.27",
    "supabase>=2.9",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.dagster]
module_name = "pipeline.definitions"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
